--- a/docs/基础/动态规划/股票.md
+++ b/docs/基础/动态规划/股票.md
@@ -1,11 +1,4 @@
-- [一次](#一次)
-- [两次](#两次)
-- [k次](#k次)
-- [多次+手续费](#多次手续费)
-- [多次+隔天](#多次隔天)
-
-
----
+[toc]
 
 ## 一次
 
@@ -46,7 +39,7 @@ class Solution {
 ```
 
 ## 两次
-![alt text](../../../../../../../../images/image-85.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408231648842.png)
 ```java
 // 123. 买卖股票的最佳时机 III
 class Solution {
@@ -68,7 +61,7 @@ class Solution {
 
 ## k次
 
-![alt text](../../../../../../../../images/image-86.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408231648843.png)
 ```java
 // 188. 买卖股票的最佳时机 IV
 class Solution {
@@ -93,7 +86,7 @@ class Solution {
 }
 ```
 ## 多次+手续费
-![alt text](../../../../../../../../images/image-83.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408231648844.png)
 ```java
 // 714. 买卖股票的最佳时机含手续费
 class Solution {
@@ -110,7 +103,7 @@ class Solution {
 ```
 
 ## 多次+隔天
-![alt text](../../../../../../../../images/image-84.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408231648845.png)
 ```java
 // 309. 买卖股票的最佳时机含冷冻期
 class Solution {
