--- a/docs/基础/动态规划/背包问题.md
+++ b/docs/基础/动态规划/背包问题.md
@@ -9,13 +9,52 @@
 
 > 完全背包：无限物品。本行
 
-![alt text](../../../images/image-51.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408231645317.png)
 
-## 分数背包
+## 分数背包（贪心）
 - 按照单价逆序。
 - 遍历装入背包，判断拿完和拿不完。拿完就装入，减小容量；拿不完，就装入部分，把剩余空间填满。
 
-![alt text](../../../images/image-44.png)
+```java
+/* 物品 */
+class Item {
+    int w; // 物品重量
+    int v; // 物品价值
+
+    public Item(int w, int v) {
+        this.w = w;
+        this.v = v;
+    }
+}
+
+/* 分数背包：贪心 */
+double fractionalKnapsack(int[] wgt, int[] val, int cap) {
+    // 创建物品列表，包含两个属性：重量、价值
+    Item[] items = new Item[wgt.length];
+    for (int i = 0; i < wgt.length; i++) {
+        items[i] = new Item(wgt[i], val[i]);
+    }
+    // 按照单位价值 item.v / item.w 从高到低进行排序
+    Arrays.sort(items, Comparator.comparingDouble(item -> -((double) item.v / item.w)));
+    // 循环贪心选择
+    double res = 0;
+    for (Item item : items) {
+        if (item.w <= cap) {
+            // 若剩余容量充足，则将当前物品整个装进背包
+            res += item.v;
+            cap -= item.w;
+        } else {
+            // 若剩余容量不足，则将当前物品的一部分装进背包
+            res += (double) item.v / item.w * cap;
+            // 已无剩余容量，因此跳出循环
+            break;
+        }
+    }
+    return res;
+}
+```
+
+
 
 ## 01背包：最大价值
 
@@ -101,7 +140,7 @@ public int pack01(int[] w, int[] v, int n, int cap) {
 }
 ```
 
-### (n+1) x (cap+1)
+### (n+1) x (cap+1) 推荐
 
 对着每个物品（包括0个物品），进行[0, 最大背包容量]的依次计算。得到 (n+1) x (cap+1) 的数组。
 
@@ -128,7 +167,7 @@ $dp[i][c] =  \begin{cases}  dp[i-1][c], & \text{if } c < w[i-1]\\ \max(dp[i-1][c
 ​	背包必须包含0和n，0表示没装东西，n表示最大容量。
 
 ```java
-/* 0-1 背包：动态规划 */
+/* w和v都还是n个，不用特意变成n+1个 */
 public int pack01(int[] w, int[] v, int n, int cap) {
     int[][] dp = new int[n+1][cap + 1];
     // 从第1个物品开始，包括n
@@ -150,13 +189,8 @@ public int pack01(int[] w, int[] v, int n, int cap) {
 public int pack01(int[] w, int[] v, int n, int cap) {
     int[] dp = new int[cap + 1];
     for (int i = 1; i <= n; i++) {
-        for (int c = cap; c >= 0; c--) {
-	        // 倒序遍历!!!!! 因为正序修改后面依赖的上行历史数据，变成了本行的最新数据
-            // 装不下：则不变
-            // 装的下：不选和选物品 i 这两种方案的较大值
-            if (c >= w[i-1]) {
-	            dp[c] = Math.max(dp[c], dp[c - w[i-1]] + v[i-1]);
-            }
+        for (int c = cap; c >= w[i-1]; c--) {		// 把if判断融合进去
+            dp[c] = Math.max(dp[c], dp[c - w[i-1]] + v[i-1]);
         }
     }
     return dp[cap];
@@ -202,9 +236,15 @@ public int pack01(int[] w, int n, int cap) {
 
 **每个物品可以重复选取**，所以看的是本行的最大价值（最新的）
 
-$dp[i, c] = \max(dp[i-1, c], dp[i, c - w[i]] + v[i])$
-
 ![image-20240813084127881](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408130841883.png)
+
+
+
+### n x (cap+1)
+
+$$
+dp[i, c] = \max(dp[i-1, c], dp[i, c - w[i]] + v[i])%
+$$
 
 ```java
 /* 完全背包：动态规划 */
@@ -229,12 +269,8 @@ public long packInfinity(int[] w, int[] v, int n, int cap) {
     }
     return dp[n - 1][cap];
 }
-```
 
-因为都是同一行，所以既不需要倒序，而且也不需要初始化第一行。
-
-```java
-/* 完全背包：动态规划 */
+/* 因为都是同一行，所以既不需要倒序，而且也不需要初始化第一行。 */
 public long packInfinity(int[] w, int[] v, int n, int cap) {
     long[] dp = new long[cap + 1];
     // 列首是0，使用默认
@@ -251,9 +287,58 @@ public long packInfinity(int[] w, int[] v, int n, int cap) {
 }
 ```
 
+
+
+### (n+1) x (cap+1)
+
+$$
+dp[i, c] = \max(dp[i-1, c], dp[i, c - w[i-1]] + v[i-1])
+$$
+
+
+
+```java
+/* 完全背包：动态规划 */
+public long packInfinity(int[] w, int[] v, int n, int cap) {
+    long[][] dp = new long[n + 1][cap + 1];
+    for (int i = 1; i <= n; i++) {
+        for (int c = 1; c <= cap; c++) {
+	        if (c >= w[i-1]) {            
+                // 装的下：不选和选物品 i 这两种方案的较大值
+                dp[i][c] = Math.max(dp[i - 1][c], dp[i][c - w[i-1]] + v[i-1]);
+            } else {
+                dp[i][c] = dp[i - 1][c];
+            }
+        }
+    }
+    return dp[n][cap];
+}
+
+/* 完全背包：动态规划 */
+public long packInfinity(int[] w, int[] v, int n, int cap) {
+    long[] dp = new long[cap + 1];
+    for (int i = 1; i <= n; i++) {
+        for (int c = w[i-1]; c <= cap; c++) {		// 把if判断的小于则保持不变，融合进去
+            dp[c] = Math.max(dp[c], dp[c - w[i-1]] + v[i-1]);
+        }
+    }
+    return dp[cap];
+}
+```
+
+### 练习
+
  [洛谷P1616 疯狂的采药.md](..\..\题\其他\洛谷P1616 疯狂的采药.md) 
 
-## 总结
+ [洛谷P1853 投资的最大效益.md](..\..\题\其他\洛谷P1853 投资的最大效益.md)  
 
-- 二维简化为一维：如果依赖旧的，就倒序。
-- 初始化而跳过预备元素：[初始化而跳过预备元素](<198. 打家劫舍.mdom/itheima/algorithm/dynamicprogramming/leetcode/198. 打家劫舍.md>)
+【模板】 [322. 零钱兑换.md](..\..\题\leetcode\322. 零钱兑换.md) : 最小求解、刚好
+
+【模板】[洛谷P2918 USACO08NOV Buying Hay S.md](..\..\题\其他\洛谷P2918 USACO08NOV Buying Hay S.md) : 最小求解、至少
+
+【模板】 [518. 零钱兑换 II.md](..\..\题\leetcode\518. 零钱兑换 II.md) 刚好价值的方案
+
+## Todo
+
+[背包问题 - 题单 - 洛谷 | 计算机科学教育新生态 (luogu.com.cn)](https://www.luogu.com.cn/training/5197)
+
