--- a/docs/基础/树/计算题.md
+++ b/docs/基础/树/计算题.md
@@ -8,6 +8,8 @@
 
 
 
+## 完全二叉树
+
 完全二叉树可以看做是满二叉树的删减，**最底层节点靠左填充，其他层节点全被填满**。完全二叉树的生成遵从从左往右，从上到下的顺序。
 
 ​	若一颗**完全二叉树**中某节点无左孩子，则该节点是叶子节点（根节点也是叶子节点）
@@ -32,13 +34,13 @@
 
 ​	
 
-
+## 平衡二叉树
 
 一个高度为 8 的高度**平衡二叉树**至少有几个节点？54
 
 ![image-20240622103636180](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406221036236.png)
 
-
+## 二叉搜索树
 
 不同的二叉搜索树有几个？Catalan数，  [Catalan数.md](..\动态规划\Catalan数.md) 
 
@@ -46,13 +48,21 @@
 
 二叉搜索树的查找操作与二分查找算法的工作原理一致，都是每轮排除一半情况。循环次数最多为二叉树的层数，当二叉树平衡时，使用 𝑂(log⁡𝑛) 时间
 
-12个元素的排序数组进行二分查找，每个元素被查找的概率是相等的，则平均比较次数是？37/12
-
-​	$查找次数/元素个数=1*1+2*2+3*4+4*5$。画一个二叉树，第i层就要比较ici
 
 
+>  二分查找的平均查找长度
 
-带权路径长度  WPL = 节点权重 * 路径边数的和。
+Q1：
+
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408231649507.png)
+
+Q2：12个元素的排序数组进行二分查找，每个元素被查找的概率是相等的，则平均比较次数是？37/12
+
+A2：$查找次数/元素个数=1*1+2*2+3*4+4*5$。画一个二叉树，第i层就要比较ici
+
+
+
+## 带权路径长度  WPL = 节点权重 * 路径边数的和。
 
 ![image-20240618163235546](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406181632608.png)
 
@@ -64,7 +74,7 @@ huffman树还可以，非叶子节点的权值的和
 
 
 
- [两种遍历来推树.md](遍历\两种遍历来推树.md) 
+## [两种遍历来推树.md](遍历\两种遍历来推树.md) 
 
 
 
