--- a/docs/背/八股/计算题.md
+++ b/docs/背/八股/计算题.md
@@ -6,4 +6,6 @@
 
 [计算题.md](../../基础/树\计算题.md) 树 
 
-[计算题.md](../../基础/递归\计算题.md) 递归
+[计算题.md](../../基础/递归\计算题.md) 递归 
+
+[ASL.md](..\..\基础\基础知识\ASL.md) 哈希的平均cha'zhao
