--- a/docs/题/其他/洛谷P1616 疯狂的采药.md
+++ b/docs/题/其他/洛谷P1616 疯狂的采药.md
@@ -1,5 +1,5 @@
 ```java
-// https://www.luogu.com.cn/problem/P1616
+// https://www.luogu.com.cn/problem/P1616 疯狂的采药
 import java.util.*;
 
 public class Main {
@@ -22,41 +22,32 @@ public class Main {
 }
 
 class Solution {
-    // n个物品，cap背包容量
-    public long packInfinity(int[] w, int[] v, int n, int cap) {
-        long[][] dp = new long[n][cap + 1];
-        for(int c = 1; c<=cap;c++){
-            if(w[0] <= c){
-                dp[0][c] = dp[0][c-w[0]]+v[0];
+public long packInfinity(int[] w, int[] v, int n, int cap) {
+    long[][] dp = new long[n + 1][cap + 1];
+    for (int i = 1; i <= n; i++) {
+        for (int c = 1; c <= cap; c++) {
+	        if (c >= w[i-1]) {            
+                // 装的下：不选和选物品 i 这两种方案的较大值
+                dp[i][c] = Math.max(dp[i - 1][c], dp[i][c - w[i-1]] + v[i-1]);
+            } else {
+                dp[i][c] = dp[i - 1][c];
             }
         }
-        for (int i = 1; i < n; i++) {
-            for (int c = 1; c <= cap; c++) {
-                if (w[i] > c) {
-                    dp[i][c] = dp[i-1][c];
-                }
-                else{
-                    // 装的下：不选和选物品 i 这两种方案的较大值
-                    dp[i][c] = Math.max(dp[i-1][c], dp[i][c - w[i]] + v[i]);
-                }
-            }
-        }
-        return dp[n-1][cap];
     }
+    return dp[n][cap];
+}
 }
 ```
 
 ```java
-/* 完全背包：动态规划 */
 public long packInfinity(int[] w, int[] v, int n, int cap) {
     long[] dp = new long[cap + 1];
-    // 列首是0，使用默认
-    for (int i = 0; i < n; i++) {
+    for (int i = 1; i <= n; i++) {
         for (int c = 1; c <= cap; c++) {
             // 装不下就维持不变
-            if (w[i] <= c) {
+            if (c >= w[i-1] ) {
                 // 装的下：不选和选物品 i 这两种方案的较大值
-                dp[c] = Math.max(dp[c], dp[c - w[i]] + v[i]);
+                dp[c] = Math.max(dp[c], dp[c - w[i-1]] + v[i-1]);
             }
         }
     }
