--- a/docs/基础/动态规划/1.md
+++ b/docs/基础/动态规划/1.md
@@ -20,6 +20,22 @@
 
 
 
+
+
+动态规划、贪心法、分治
+
+​	都是把大问题化解为子问题。
+
+​	动态规划，子问题的求解会重复，所以是有一个记忆数组。
+
+​	分治，子问题都是独立不重复的。
+
+​	贪心，子问题的分解不全，解得快，但考虑不全（先前走，不回头）。
+
+
+
+
+
 动态规划和递归的联系：
 
 ​	最小子问题对应的状态。动态规划是初始状态，递归是边界条件。
