--- a/docs/背/背java/排序.md
+++ b/docs/背/背java/排序.md
@@ -1,7 +1,9 @@
 ```java
-// 数组
-Arrays.sort(arr);
-Arrays.sort(arr, (a,b)-> a-b);
+// sort, self-defined sort
+Arrays.sort(arr);		// 可以是int
+
+Integer[] arr2 = Arrays.stream(arr).boxed().toArray(Integer[]::new);
+Arrays.sort(arr2, (a,b)-> a-b);		// 必须是T[]		sort(T[] a, Comparator<? super T> c) 
 ```
 
 ```java
