--- a/docs/背/背java/数组.md
+++ b/docs/背/背java/数组.md
@@ -9,12 +9,9 @@ for (int i = 0; i < strs.length; i++) {
 
 ```java
 // sort, self-defined sort
-Arrays.sort(arr);
-Arrays.sort(arr, (a,b)-> a-b);
-
-// fill, fill range
-Arrays.fill(arr, -1);
-Arrays.fill(0, 3, -1);
+Arrays.sort(arr);		// 可以是int
+Integer[] arr2 = Arrays.stream(arr).boxed().toArray(Integer[]::new);
+Arrays.sort(arr2, (a,b)-> a-b);		// 必须是T[]		sort(T[] a, Comparator<? super T> c) 
 
 // copy
 int[] arr2 = Arrays.copyOf(arr, 3);
@@ -28,5 +25,19 @@ System.arraycopy(arr, 0, brr, 0, 3);
 
 // equals
 boolean flag = Arrays.equals(arr, brr);
+```
+
+```java
+// 一维数组
+// fill, fill range
+int[] arr = new int[10];
+Arrays.fill(arr, -1);
+Arrays.fill(0, 3, -1);
+
+// 二维数组
+int[][] arr2 = new int[10][10];
+for(int[] a: arr2){
+    Arrays.fill(a, 0x3f3f3f3f);
+}
 ```
 
