--- a/docs/题/leetcode/198. 打家劫舍.md
+++ b/docs/题/leetcode/198. 打家劫舍.md
@@ -11,12 +11,13 @@ class Solution {
         if(n == 1){
             return nums[0];
         }
-        
         int[] dp = new int[n];
-        // 边界条件
+        // 第一家必然可偷
         dp[0] = nums[0];
+        // (第一家偷第二家不偷，第一家不偷第二家偷)
         dp[1] = Math.max(nums[0], nums[1]);
         for (int i = 2; i < n; i++) {
+            // (这家不偷，上家不偷+这家偷)
             dp[i] = Math.max(dp[i - 1], dp[i - 2] + nums[i]);
         }
         return dp[n - 1];
