--- a/docs/基础/树/计算题.md
+++ b/docs/基础/树/计算题.md
@@ -44,9 +44,11 @@
 
 不同的二叉搜索树有几个？Catalan数，  [Catalan数.md](..\动态规划\Catalan数.md) 
 
-**二叉排序树**的中序遍历是升序，我们在二叉搜索树中获取有序数据仅需 𝑂(𝑛) 时间。
 
-二叉搜索树的查找操作与二分查找算法的工作原理一致，都是每轮排除一半情况。循环次数最多为二叉树的层数，当二叉树平衡时，使用 𝑂(log⁡𝑛) 时间
+
+二叉搜索树的查找操作与二分查找算法的工作原理一致，都是每轮排除一半情况。循环次数最多为二叉树的层数，当二叉树平衡时，使用 𝑂(log⁡𝑛) 时间。
+
+同理，为了维持树，更新也要先找到位置，也是 O(logn)
 
 
 
