--- a/docs/题/leetcode/11.盛最多水的容器.md
+++ b/docs/题/leetcode/11.盛最多水的容器.md
@@ -1,22 +1,47 @@
-- [11.盛最多水的容器](#11盛最多水的容器)
-- [42.接雨水](#42接雨水)
+[15.4  最大切分乘积问题 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_greedy/max_product_cutting_problem/#2)
 
----
-## 11.盛最多水的容器
 
-- 线：`volume = (j-i) * min(arr[j], arr[i])`
-- 最小边移动，还可以连续移动，让新边更高；
+- 线：`cap= min(height[i], height[j]) * (j - i)`
+- 移小不移大：移大必然减小容量，不是最优容量。移动小的，可能创造奇迹。
+- 优化：最小边移动，还可以连续移动。
+
+```java
+class Solution {
+    public int maxArea(int[] height) {
+        // 初始化 i, j，使其分列数组两端
+        int i = 0, j = height.length - 1;
+        // 初始最大容量为 0
+        int res = 0;
+        // 循环贪心选择，直至两板相遇
+        while (i < j) {
+            // 更新最大容量
+            int cap = Math.min(height[i], height[j]) * (j - i);
+            res = Math.max(res, cap);
+            // 向内移动短板
+            if (height[i] < height[j]) {
+                i++;
+            } else {
+                j--;
+            }
+        }
+        return res;
+    }
+}a
+```
+
+
+
 ```java
 class Solution {
     public int maxArea(int[] height) {
         int i = 0, j = height.length - 1;
-        int volume = 0;
+        int res = 0;
         while (i < j) {
-            int min = Integer.min(height[i], height[j]);
-            volume = Integer.max(volume, (j - i) * min);
+            int cap = Math.min(height[i], height[j]) * (j - i);
+            res = Math.max(res, cap);
+            // 让新边更高
             if (height[i] < height[j]) {
                 int left = height[i];
-                // 让新边更高；
                 while (height[i] <= left && i < j) {
                     i++;
                 }
@@ -27,50 +52,11 @@ class Solution {
                 }
             }
         }
-        return volume;
+        return res;
     }
 }
 ```
 
-## 42.接雨水
+> 正确性证明
 
-![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132246998.png)
-
-单调栈。新元素入栈，需要弹出小于它的老元素。
-
-弹出时，以弹出元素为底，以弹出后的新栈底为左。雨水为新墙和老墙围起来且不包括底的部分。
-
-`volume = (j-i-1) * (min(arr[j], arr[i]) - bottom)`
-
-```java
-class Solution {
-    public int trap(int[] height) {
-        LinkedList<Data> stack = new LinkedList<>();
-        int result = 0;
-
-        for(int i = 0 ; i < height.length; i++){
-            while(!stack.isEmpty() && stack.peek().height < height[i]){
-                Data bottom = stack.poll();
-                Data nextLeft = stack.peek();
-                if(nextLeft != null){
-                    int w = i - nextLeft.i - 1;
-                    int h = Math.min(nextLeft.height, height[i]) - bottom.height;
-                    result += w * h;
-                }
-            }
-            stack.push(new Data(height[i], i));
-        }
-        return result;
-    }
-}
-
-class Data{
-    int height;
-    int i;
-
-    Data(int height, int i){
-        this.height = height;
-        this.i = i;
-    }
-}
-```
+![image-20240903151226276](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409031512342.png)
