--- a/docs/基础/动态规划/背包问题.md
+++ b/docs/基础/动态规划/背包问题.md
@@ -28,12 +28,7 @@ class Item {
 }
 
 /* 分数背包：贪心 */
-double fractionalKnapsack(int[] wgt, int[] val, int cap) {
-    // 创建物品列表，包含两个属性：重量、价值
-    Item[] items = new Item[wgt.length];
-    for (int i = 0; i < wgt.length; i++) {
-        items[i] = new Item(wgt[i], val[i]);
-    }
+double fractionalKnapsack(Item[] items, int[] wgt, int[] val, int cap) {
     // 按照单位价值 item.v / item.w 从高到低进行排序
     Arrays.sort(items, Comparator.comparingDouble(item -> -((double) item.v / item.w)));
     // 循环贪心选择
@@ -64,7 +59,7 @@ double fractionalKnapsack(int[] wgt, int[] val, int cap) {
 
 ### n x (cap+1)
 
-对着每个物品，进行[0, 最大背包容量]的依次计算。得到 n x (cap+1) 的数组。
+对着每个物品，进行**[0, 最大背包容量]**的依次计算。得到 n x (cap+1) 的数组。
 
 `dp[i][c]`表示前`[0...i]`个物品一起考虑后对应的不同容量背包`[0...cap]`下的最大价值。
 
@@ -140,7 +135,7 @@ public int pack01(int[] w, int[] v, int n, int cap) {
 }
 ```
 
-### (n+1) x (cap+1) 推荐
+### 🚀(n+1) x (cap+1) 推荐
 
 对着每个物品（包括0个物品），进行[0, 最大背包容量]的依次计算。得到 (n+1) x (cap+1) 的数组。
 
@@ -176,7 +171,7 @@ public int pack01(int[] w, int[] v, int n, int cap) {
             if (c >= w[i-1]) {
                 // 装的下：不选和选物品 i 这两种方案的较大值
                 dp[i][c] = Math.max(dp[i - 1][c], dp[i - 1][c - w[i-1]] + v[i-1]);
-            } else{
+            } else{  
 	            // 装不下：则不选物品 i
                 dp[i][c] = dp[i - 1][c];
             }
@@ -187,8 +182,11 @@ public int pack01(int[] w, int[] v, int n, int cap) {
 
 /* 0-1 背包：空间优化后的动态规划 */
 public int pack01(int[] w, int[] v, int n, int cap) {
-    int[] dp = new int[cap + 1];
+    int[] dp = new int[cap + 1];		// dp的范围是背包的最大容量
+    // i: 1-n 是物品的遍历
     for (int i = 1; i <= n; i++) {
+        // c：dp数组的遍历
+     	// w 和 v 都是物品i, w[i-1], v[i-1]
         for (int c = cap; c >= w[i-1]; c--) {		// 把if判断融合进去
             dp[c] = Math.max(dp[c], dp[c - w[i-1]] + v[i-1]);
         }
@@ -289,7 +287,7 @@ public long packInfinity(int[] w, int[] v, int n, int cap) {
 
 
 
-### (n+1) x (cap+1)
+### 🚀(n+1) x (cap+1)
 
 $$
 dp[i, c] = \max(dp[i-1, c], dp[i, c - w[i-1]] + v[i-1])
