--- a/docs/基础/排序/01_冒泡.md
+++ b/docs/基础/排序/01_冒泡.md
@@ -1,5 +1,3 @@
-# 冒泡排序
-
 
 ## 基础版
 
@@ -49,9 +47,9 @@ public void sort(int[] nums, int i) {
     sort(nums, i - 1);
 }
 ```
-## 改进版：记录待排序数组边界
+## 🚀改进版：记录待排序数组边界
 
-- 用`x`记录最后一次交换的位置 `j`，每轮结束`[0...j]`是待排序部分, `[j+1, n-1]`是已排序（最后一次交换后，只是j+1一定是大的，j还可能比之前的小）
+- 用`x`记录最后一次交换的位置 `j`，每轮结束`[0...x]`是待排序部分, `[x+1, n-1]`是已排序（最后一次交换后，只是x+1一定是大的，x还可能比之前的小）
 - 让下一轮的 `i = x` （`[0...i]`是待排序部分）
 
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406201437851.png)
@@ -59,7 +57,7 @@ public void sort(int[] nums, int i) {
 public int[] sortArray(int[] nums) {
     // 让下一轮的 `i = x`
     for(int i = nums.length - 1; i >= 1;){
-        int x = 0;
+        int x = 0;		// 等于0，则直接退出for循环
         for(int j = 0 ; j < i; j++){
             if(nums[j] > nums[j+1]){
                 swap(nums, j , j+1);
