--- a/docs/基础/排序/02_选择.md
+++ b/docs/基础/排序/02_选择.md
@@ -1,22 +1,23 @@
-## 选择排序：选最小
+## 🚀选择排序：选最小
 
 ```java
-/* 选择排序 */
-void selectionSort(int[] nums) {
+public int[] sortArray(int[] nums) {
     int n = nums.length;
-    // 外循环：未排序区间为 [i, n-1]
-    for (int i = 0; i < n - 1; i++) {
-        // 内循环：找到未排序区间 [i, n-1] 内的最小元素
-        int k = i;
+    // 内循环：找到未排序区间 [i, n-1] 内的最小元素
+    // 外循环: 则i属于[0, n-2]
+    for (int i = 0; i < n - 1; i++) 
+        // 默认第一个最小
+        int min = i;
         for (int j = i + 1; j < n; j++) {
-            if (nums[j] < nums[k])
-                k = j; // 记录最小元素的索引
-        }        
-        // 将该最小元素与未排序区间的首个元素交换
-        if(k != i){
-            swap(nums, i, max);
+            if (nums[j] < nums[min]) {
+                min = j;
+            }
+        }
+        if (min != i) {
+            swap(nums, min, i);
         }
     }
+    return nums;
 }
 ```
 
