--- a/docs/基础/排序/03_插入.md
+++ b/docs/基础/排序/03_插入.md
@@ -4,14 +4,14 @@
 
 ![插入排序流程](https://www.hello-algo.com/chapter_sorting/insertion_sort.assets/insertion_sort_overview.png)
 
-- 将数组分为已排序部分和未排序部分：`[0 .. i-1]`  `[i.. n-1]`。则low的下标 `[1, n-1]`
-- 每次从未排序区域取出第一个元素, 即i下标，插入到已排序区域
-- 插入到已排序区域：从i倒着往前，检查 i 左边的元素 `int j = i - 1;`，如果左边大于 i 所在的元素 `a[j] > base`，就右移数组 `nums[j+1] = nums[j]`
+- 将数组分为已排序部分和待插入部分：`[0 .. i-1]`  `[i.. n-1]`。则i的下标 `[1, n-1]`
+- 每次从待插入区域取出第一个元素, 即i下标，插入到已排序区域
+- 插入到已排序区域：从i倒着往前，检查 i 左边的元素 `int j = i - 1;`，如果左边大于 i 所在的元素 `nums[j] > base`，就右移数组 `nums[j+1] = nums[j]`
 
 ```java
 // 912. 排序数组
 public int[] sortArray(int[] nums) {
-    // 已排序 [0...i-1], 未排序 [i...n-1]
+    // 内循环待插入 [i...n-1]，i属于[1,n-1], 默认第一个已经不用插入，最后一个还要插入
     for (int i = 1; i < nums.length; i++) {
         // 因为会覆盖 i 下标的元素，所以要保存到临时变量
         int base = nums[i];
@@ -24,7 +24,6 @@ public int[] sortArray(int[] nums) {
         // 原位置不插
         if (j != i - 1) {
             // 当前是不符合的位置 nums[j] <= base，所以插入到下一个位置
-            // 因为i--了，nums[j+1]才是空缺的位置
             nums[j + 1] = base;
         }
     }
