--- a/docs/基础/排序/04_快速排序.md
+++ b/docs/基础/排序/04_快速排序.md
@@ -1,6 +1,6 @@
 ## 双指针：最能记住的
 
-![快速排序流程](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408011331042.png)
+![image-20240921093636233](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409210936314.png)
 
 待排序数组：`[i...j]`
 
@@ -13,7 +13,8 @@
 // 912. 排序数组
 class Solution {
     public int[] sortArray(int[] nums) {
-        quickSort(nums, 0, nums.length - 1);
+        int n = nums.length;
+        quickSort(nums, 0, n - 1);
         return nums;
     }
 
@@ -23,29 +24,29 @@ class Solution {
         if (i >= j) {
             return;
         }
-        int pivot = partition(nums, i, j);
-        quickSort(nums, i, pivot - 1);
-        quickSort(nums, pivot + 1, j);
+        int p = partition(nums, i, j);
+        quickSort(nums, i, p - 1);
+        quickSort(nums, p + 1, j);
     }
 
     public int partition(int[] nums, int i, int j) {
-        // 第一个选择为哨兵。哨兵右边都是大于等于，左边都是小于等于。
-        // i和j表示空缺位，开始nums[i]是空缺位
-        int temp = nums[i];
+        // 第一个选择为哨兵。
+        int base = nums[i];
+        // i < j 起码有两个元素
         while (i < j) {
-            // 找到右边不该存在的小元素
-            while (i < j && nums[j] >= temp)
+            // i和j表示空缺位，开始nums[i]是空缺位
+            // 哨兵右边都是大于等于，左边都是小于等于。
+            while (i < j && nums[j] >= base){		// 找到右边不该存在的小元素
                 j--;
-            // 填补空缺 i
-            nums[i] = nums[j];
-            // 找到左边不该存在的大元素
-            while (i < j && nums[i] <= temp)
+        	}
+        	nums[i] = nums[j];						// 填补空缺 i
+            
+            while (i < j && nums[i] <= base){		// 找到左边不该存在的大元素
                 i++;
-            // 填补空缺j
-            nums[j] = nums[i];
+            }
+            nums[j] = nums[i];						// 填补空缺j
         }
-        // 最后i==j, 填补最初的哨兵值
-        nums[i] = temp;
+        nums[i] = base;								// 最后i==j, 填补最初的哨兵值
         return i;
     }
 }
