--- a/docs/基础/排序/05_归并.md
+++ b/docs/基础/排序/05_归并.md
@@ -21,19 +21,17 @@ public int[] sortArray(int[] nums) {
     return nums;
 }
 
-public void mergeSort(int[] nums, int left, int right, int[] t_arr) {
-    // 当子数组长度为 1 时终止递归
-    if (left == right) {
+public void mergeSort(int[] nums, int i, int j, int[] t_arr){
+    if(i >= j){		// 当子数组长度为 1 时终止递归
         return;
     }
-    // 分
-    int mid = (left + right) >>> 1;
-    mergeSort(nums, left, mid, t_arr);
-    mergeSort(nums, mid + 1, right, t_arr);
-    // 并：结果存到临时数组里
-    merge(nums, left, mid, mid + 1, right, t_arr);
+    int mid = (i + j) >>> 1;
+    mergeSort(nums, i, mid, t_arr);					// 分
+    mergeSort(nums, mid + 1, j, t_arr);
+    merge(nums, i, mid, mid+1, j, t_arr);			// 并：结果存到临时数组里
+
     // 将临时数组里的结果拷回原数组
-    System.arraycopy(t_arr, left, nums, left, right - left + 1);
+    System.arraycopy(t_arr, i, nums, i, j - i + 1);
 }
 
 public void merge(int[] nums, int iLeft, int iRight, int jLeft, int jRight, int[] t_arr) {
