--- a/docs/基础/排序/06_堆排序.md
+++ b/docs/基础/排序/06_堆排序.md
@@ -19,7 +19,7 @@
 
 * 非叶子节点范围为 $[0, size/2-1]$
 
-  ​	最后一个（叶）节点的父节点，即为最后一个非叶子节点。
+  ​	最后一个叶节点的父节点，即为最后一个非叶子节点。
 
   ​	最后节点的下标i，则父节点为 (i-1)/2。
 
@@ -78,7 +78,7 @@ class Solution {
 
 
 
-#### Floyd: 下潜
+#### 🚀Floyd: 下潜
 
 O(n)
 
@@ -301,21 +301,13 @@ class Solution {
     }
 
     static class MaxHeap {
-        public int[] nums;
-        public int size;
+        int[] nums;
+        int size;
 
         public MaxHeap(int[] nums) {
             this.nums = nums;
             this.size = nums.length;
             buildHeap();
-        }
-
-        public int poll() {
-            int peek = nums[0];
-            swap(0, size - 1);
-            size--;
-            down(0);
-            return peek;
         }
 
         private void buildHeap() {
@@ -344,6 +336,16 @@ class Solution {
             int temp = nums[i];
             nums[i] = nums[j];
             nums[j] = temp;
+        }
+        
+        public int poll() {
+            int peek = nums[0];
+            
+            swap(0, size - 1);
+            size--;
+            down(0);
+            
+            return peek;
         }
     }
 }
