--- a/docs/基础/排序/排序.md
+++ b/docs/基础/排序/排序.md
@@ -17,17 +17,65 @@ private void swap(int[] nums, int i, int j){
 
 冒泡：j和j+1比较，把最大的移到未排序的末尾。
 
-选择：每轮从未排序选出最小的，放到已排序的末尾。
+​	（1）两个for循环，内循环是比较。
 
-插入：每轮从未排序“随机”选一个，放到已排序中。
+​	（2）swap（j,j + 1），则j是[0, n-2], j<i，则 i从n-1开始，到1结束。
+
+​	（3）优化：每轮记住最后一次交换的位置j为x，下一轮i=x。每轮结束[0, x]未排序、[x+1, n-1]已排序。
+
+选择：每轮从未排序选出最小的，交换未排序的首位。
+
+​	（1）两个for循环，内循环是从未排序中找。
+
+​	（2）未排序部分为 [i, n-1]，i属于 [0, n-2]。在未排序部分中找到元素最小的索引 k
+
+​	（3）如果不原地 k=i，那么交换未排序的首位
+
+插入：每轮从未排序“随机”选一个，插入到已排序中。
+
+​	（1）for + while，内循环是待插入
+
+​	（2）待插入部分是 [i, n-1]，i属于[1,n-1], 默认第一个已经不用插入，最后一个还要插入
+
+​	（3）保持i处的变量base，将i左边元素右移，最后将base填入nums[j+1]。
 
 
 
-快速：两个哨兵。
+快速：两个哨兵，哨兵不排，哨兵左右递归
+
+​	（1）一个partition工具函数来获得哨兵和排序，一个quickSort递归函数。
+
+​	（2）quickSort 只有一个元素 i>=j 就退出，partion 的while循环 i < j 起码两个元素
+
+​	（3）quickSort p不参与下一次递归，[i, p-1], [p+1, j]
+
+​	（4）partition 先找到j给nums[i]，再找到 i 给 nums[j]。最后 i == j，赋值谁都行。
 
 归并：先划分两个mergeSort，再合并merge。
 
+​	（1）一个mergeSort递归函数，一个merge工具函数来合并数组。
+
+​	（2）mergeSort 只有一个元素 i>=j 就退出
+
+​	（3）mergeSort 的mid参与排序，因为它的中间位置不像哨兵的已经有序。
+
+​	（4）merge的拷贝是数组合并剩下的，mergeSort的拷贝是覆盖原数组。
+
 堆：先建大顶堆，再出堆。
+
+​	（1）建大顶堆
+
+​		从最后一个非叶子结点(size/2 - 1)往0索引，对每个节点下潜 
+
+​	（2）出堆顶直到剩一个
+
+​		交换：交换堆顶和最后一个元素
+
+​		size--：表示删除元素
+
+​		下潜：重新下潜堆顶
+
+​	（3）得到升序数组。 
 
 
 
