--- a/docs/基础/递归/递归.md
+++ b/docs/基础/递归/递归.md
@@ -158,10 +158,11 @@ public class Main{
 ```java
 class Solution {
     public ListNode reverseList(ListNode head) {
-        // 两个都是不适合递归的特例
+        // 两个都是不适合递归的特例，don't care
         if(head == null || head.next == null){
             return head;
         }
+        // 直接看f
         return f(head);
     }
 
@@ -171,6 +172,7 @@ class Solution {
             return head;
         }
         ListNode last = f(head.next);
+        // 在递归函数调用之后，这些都是倒着
         head.next.next = head;
         head.next = null;
         return last;     // 层层向上传递最后一个
@@ -206,7 +208,7 @@ class Solution {
 
 `for(int i = 0 ; i < 10; i++)`
 - `if(i>=10)`就是临界条件
-- `recursion(..., 0)`->`recursion(..., i + 1)`
+- `recursion(..., i)`->`recursion(..., i + 1)`
 
 `while(i<=j), int i = 0, int j = 10, i++, j--`
 - `if(i>j)`临界条件
@@ -232,43 +234,13 @@ for循环展开看
 - 用栈保存符合的链路结果。
 - 保存结果处、剪枝处、正向操作-递归-反向操作处。
 
-```java
-/* 回溯算法框架
- * 状态 state 是直至目前已被选择的元素。
- * 候选集合 choices 是输入数组中的所有元素
- * 结果 res
- */
-void backtrack(State state, List<Choice> choices, List<State> res) {
-    // 判断是否为解
-    if (isSolution(state)) {
-        // 记录解
-        recordSolution(state, res);
-        // 不再继续搜索
-        return;
-    }
-    // 遍历所有选择
-    for (Choice choice : choices) {
-        // 剪枝：判断选择是否合法
-        if (isValid(state, choice)) {
-            // 尝试：做出选择，更新状态
-            makeChoice(state, choice);
-            backtrack(state, choices, res);
-            // 回退：撤销选择，恢复到之前的状态
-            undoChoice(state, choice);
-        }
-    }
-}
-```
+### dfs()
 
 ```java
 class Solution {
-    // ！！！！！！！！！！栈、结果的定义一定要写在dfs外面
-    // 保存每条从根到叶子的链路
-    LinkedList<Integer> stack = new LinkedList<>();
-    // 所有的链路
-    List<List<Integer>> result = new ArrayList<>();
-    // 剪枝：已遍历的节点
-    boolean[] vis;
+    LinkedList<Integer> stack = new LinkedList<>();		// 临时不完整的链路
+    List<List<Integer>> result = new ArrayList<>();		// 所有的链路结果
+    boolean[] vis;		// 剪枝：已遍历的节点
     int[] nums;
 
     public List<List<Integer>> permute(int[] nums) {
@@ -291,21 +263,57 @@ class Solution {
                 continue;
             }
             // 正向操作：放入、标记已遍历
-            stack.push(nums[i]);
+            stack.addLast(nums[i]);
             vis[i] = true;
-            dfs();
+            dfs();	// 递归
             // 反向操作：拿出、取消标记
             vis[i] = false;
-            stack.pop();
+            stack.pollLast();
         }
     }
 }
 ```
 
-找到即终止：dfs返回boolean
-- 保存结果处：有符合的结果直接return true
-- 递归处：会先判断是否直接结束
+### dfs(...)
 
- [37. 解数独.md](..\..\题\leetcode\37. 解数独.md)  
+```java
+class Solution {
+    public List<List<Integer>> permute(int[] nums) {
+        // 这些变量我都是在 dfs 递归函数外面创建的，只是传递，里面又不会 new，那么结果就一直保存着
+        boolean[] vis = new boolean[nums.length];
+        LinkedList<Integer> stack = new LinkedList<>();		// 临时不完整的链路
+        List<List<Integer>> result = new ArrayList<>();		// 所有的链路结果
+        
+        dfs(nums, vis, stack, result);
+        return result;
+    }
+
+    public void dfs(int[] nums, boolean[] vis, LinkedList<Integer> stack, List<List<Integer>> result) {
+        // 判断是否为解
+        if (stack.size() == nums.length) {
+            result.add(new ArrayList<>(stack));
+            return;
+        }
+
+        for (int i = 0; i < nums.length; i++) {
+            // 剪枝处
+            if(vis[i]){
+                continue;
+            }
+            // 正向操作：放入、标记已遍历
+            stack.addLast(nums[i]);
+            vis[i] = true;
+            dfs(nums, vis, stack, result);	// 递归
+            // 反向操作：拿出、取消标记
+            vis[i] = false;
+            stack.pollLast();
+        }
+    }
+}
+```
+
+
+
+-  [37. 解数独.md](..\..\题\leetcode\37. 解数独.md)  
 
 [排列组合.md](..\数\排列组合.md) 
