--- a/docs/基础/链表/链表.md
+++ b/docs/基础/链表/链表.md
@@ -20,3 +20,84 @@
 单向链表已经可以实现非连续存储，为什么还需要双向链表？
 
 ​	双向链表删除前驱节点更方便
+
+
+
+---
+
+## 在cur节点后插入节点
+
+```java
+void insert(ListNode cur){
+    ListNode added = new ListNode(1);
+    added.next = cur.next;
+    cur.next = added;
+}
+```
+
+## 删除cur节点后面的节点
+
+```java
+void delete(ListNode cur){
+  	// cur.next.next 需要 cur.next 不为空
+    if(cur.next == null){
+        return;
+    }
+    cur.next = cur.next.next;
+}
+```
+
+如果增删首节点，那么才加入哨兵，并且 cur 从哨兵开始。
+
+```java
+ListNode add/delete(ListNode head){
+    ListNode sentinel = new ListNode(0);
+    sentinel.next = head;
+    ListNode cur = sentinel;
+    while(cur.next != null){
+        // add
+  		ListNode added = new ListNode(1);
+        added.next = cur.next.next;
+        cur.next = added;
+        cur = cur.next;
+        
+        // delelte
+        cur.next = cur.next.next;
+        cur = cur.next;
+    }
+    return sentinel.next;
+}
+```
+
+## 遍历
+
+```java
+ListNode cur = head;
+while(cur != null){
+    int val = cur.val;
+    cur = cur.next;
+}
+```
+
+## 创造链表
+
+```java
+ListNode sentinel = new ListNode(0);
+ListNode cur = sentinel
+for(int i=0;i<nums.length;i++){
+    cur.next = new ListNode(i);
+    cur = cur.next;
+}
+return sentinel.next;
+```
+
+
+
+---
+
+基本题
+
+模板题
+
+难题
+
