--- a/docs/题/leetcode/22. 括号生成.md
+++ b/docs/题/leetcode/22. 括号生成.md
@@ -1,27 +1,22 @@
 
-![image-20240621193416531](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406211934778.png)
+![image-20240924103754694](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409241037746.png)
 
 - 根节点是 `()`， 左子树是根节点的里面的东西 `(...)`，右子树是根节点括号右边的东西 `()...`
-- C0 = `[""]`
-- C1 =`["()"]`
+- **C0 = `[""]`**
+- C1 = `["(C0)C0"]`=`["()"]`
 - C2 = `["(())", "()()"]` = `["(C0)C1", "(C1)C0")]`
 - Ci = `"(Cj-1)ci-j"`
 ```java
-// 22. 括号生成
 class Solution {
     public List<String> generateParenthesis(int n) {
         ArrayList<String>[] dp = new ArrayList[n + 1];
-        for (int i = 0; i <= n; i++) {
-            dp[i] = new ArrayList<String>();
-        }
-        dp[0].add("");
-        dp[1].add("()");
 
-        // i: [2...n]
-        for (int i = 2; i <= n; i++) {
-            // j: [1...i]
-            for (int j = 1; j <= i; j++) {
-                // (c0)c1
+        dp[0] = new ArrayList<>();
+        dp[0].add("");
+
+        for (int i = 1; i <= n; i++) {      // dp[i]的计算要有dp[0..i-1]的历史结果
+            dp[i] = new ArrayList<>();
+            for (int j = 1; j <= i; j++) {      // dp[i] 的内部计算
                 for (String left : dp[j - 1]) {
                     for (String right : dp[i - j]) {
                         dp[i].add("(" + left + ")" + right);
