--- a/docs/题/leetcode/395. 至少有 K 个重复字符的最长子串.md
+++ b/docs/题/leetcode/395. 至少有 K 个重复字符的最长子串.md
@@ -33,4 +33,4 @@ class Solution {
     - 子串中没有出现次数< k的字符
 
 
-![alt text](../../images/image-66.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409181235005.png)
