--- a/src/main/java/com/itheima/datastructure/linkedlist/leetcode/19. 删除链表的倒数第 N 个结点.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/leetcode/19. 删除链表的倒数第 N 个结点.md
@@ -1,9 +1,9 @@
 
 ## 快慢指针
-- 快指针先for迭代n次，然后以快为while遍历，慢的停留就是位置。
 - 因为要删除，所以考虑头结点情况，引入哨兵。
-- 快慢指针都从哨兵开始，for迭代n次。
-- 这里之所以是n+1，是因为删除要找前一个位置。
+- 快慢指针都从哨兵开始
+- 因为删除要找前一个位置，所以找倒 n + 1，则for迭代n+1
+
 ```java
 class Solution {
     public ListNode removeNthFromEnd(ListNode head, int n) {
