--- a/src/main/java/com/itheima/datastructure/linkedlist/leetcode/203. 移除链表元素.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/leetcode/203. 移除链表元素.md
@@ -2,25 +2,6 @@
 
 因为涉及到`pre.next`，且不饿能`pre=cur`，所以引入哨兵。
 ```java
-// class Solution {
-//     public ListNode removeElements(ListNode head, int val) {
-//         ListNode pre = null;
-//         ListNode cur = head;
-//         while(cur!=null){
-//             if(cur.val == val){
-//                 pre.next = cur.next;   // pre.next
-//                 cur = cur.next;
-//             }else{
-//                 pre = pre.next;  // pre.next
-//                 cur = cur.next;
-//             }
-//         }
-//         return head;
-
-//     }
-// }
-
-
 class Solution {
     public ListNode removeElements(ListNode head, int val) {
         ListNode sentinel = new ListNode(1, head);
@@ -40,6 +21,28 @@ class Solution {
     }
 }
 ```
+
+## cur和cur.next
+
+```java
+class Solution {
+    public ListNode removeElements(ListNode head, int val) {
+        ListNode sentinel = new ListNode(0, head);
+        ListNode cur = sentinel;
+        while(cur != null && cur.next != null){
+            if(cur.next.val == val){
+                cur.next = cur.next.next;	// 删除了cur.next，但是下一个可能还要删，就不移动cur
+            }
+            else{
+                cur = cur.next;
+            }
+        }
+        return sentinel.next;
+    }
+}
+```
+
+
 
 ## 递归
 
