--- a/src/main/java/com/itheima/datastructure/linkedlist/leetcode/82. 删除排序链表中的重复元素 II.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/leetcode/82. 删除排序链表中的重复元素 II.md
@@ -11,7 +11,7 @@ class Solution {
         ListNode sentinel = new ListNode(-1111, head);
         ListNode pre = sentinel;
         ListNode cur = head;
-        while(cur.next != null){
+        while(cur.next != null){		// 框架走 cur 和 cur.next 比较
             if(cur.val == cur.next.val){
                 for(;;){
                     if(cur.next == null){   // 重复元素结尾
@@ -19,8 +19,8 @@ class Solution {
                         return sentinel.next;
                     }
                     if(cur.val != cur.next.val){    // 重复元素非结尾
+                        pre.next = cur.next;
                         cur = cur.next;
-                        pre.next = cur;
                         break;
                     }
                     cur = cur.next;
