--- a/src/main/java/com/itheima/datastructure/linkedlist/leetcode/83. 删除排序链表中的重复元素.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/leetcode/83. 删除排序链表中的重复元素.md
@@ -1,7 +1,7 @@
-## cur cur.next
+## cur cur.next 往后比较
 
-- 遍历[1, n-1]的结点`cur.next`与[0, n-2]的结点`cur`
 - 不用哨兵，因为不会删除第一个元素。即使第一个元素和第二个元素重复了，也是删除第二个元素。
+
 ```java
 class Solution {
     public ListNode deleteDuplicates(ListNode head) {
@@ -12,6 +12,7 @@ class Solution {
         while(cur.next != null){
             if(cur.val == cur.next.val){
                 cur.next = cur.next.next;
+                // 这里cur不动，是因为可能下一个节点还可能和当前节点重复
             }else{
                 cur = cur.next;
             }
