--- a/docs/基础/树/计算题.md
+++ b/docs/基础/树/计算题.md
@@ -12,15 +12,13 @@
 
 完全二叉树可以看做是满二叉树的删减，**最底层节点靠左填充，其他层节点全被填满**。完全二叉树的生成遵从从左往右，从上到下的顺序。
 
-​	若一颗**完全二叉树**中某节点无左孩子，则该节点是叶子节点（根节点也是叶子节点）
-
-​	一棵完全二叉树某节点如果没有左孩子，则一定不会有右孩子，那这个节点一定是个叶子结点。
+​	若一颗**完全二叉树**中某节点无左孩子，那么也必无右孩子，则该节点是叶子节点（根节点也是叶子节点）
 
 
 
 一棵完全二叉树共有54711个节点，则它有多少个叶子节点？
 
-​	假设完全二叉树的节点数量为 𝑛 ，则叶节点数量为 (𝑛+1)/2  向下整除，非叶节点数量为 (𝑛−1)/2 向下整除。
+​	假设完全二叉树的节点数量为 𝑛 ，则叶节点数量为 (𝑛+1)/2  向下整除，非叶节点数量为 (𝑛−1)/2 向下整除。（叶子节点>=非叶子节点。0-1，0-1-2）
 
 ​	推导过程：
 
