--- a/docs/题/leetcode/96. 不同的二叉搜索树.md
+++ b/docs/题/leetcode/96. 不同的二叉搜索树.md
@@ -1,13 +1,16 @@
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406211815135.png)
+
+纯模板
+
 ```java
 // 96. 不同的二叉搜索树
 class Solution {
     public int numTrees(int n) {
         int[] dp = new int[n+1];
         dp[0] = 1;
-        dp[1] = 1;
-        // [2...n] i是节点的数量
-        for(int i = 2; i <= n; i++){
-            // [1...i] 以j为根节点
+        
+        // dp[i]的计算要有dp[1..i-1]的历史结果
+        for(int i = 1; i <= n; i++){
             for(int j = 1; j <= i; j++){
                 dp[i] += dp[j-1] * dp[i-j];
             }
