--- a/src/main/java/com/itheima/datastructure/linkedlist/链表.md
+++ b/src/main/java/com/itheima/datastructure/linkedlist/链表.md
@@ -22,20 +22,33 @@
 - 初始化不一样：一个哨兵两个指针和两个哨兵四个指针。
 - `findNode()`不一样：单哨兵需要特别处理 index = -1，因为 for 循环的退出条件哨兵表示直接退出了。
 
+## 基本结构
+
+```java
+/* 链表节点类 */
+class ListNode {
+    int val;        // 节点值
+    ListNode next;  // 指向下一节点的引用
+    ListNode(int x) { val = x; }  // 构造函数
+}
+```
+
+
 
 ## 双指针
+
 - 快慢指针：同一处开始，sentinel或head
 - pre cur：pre从sentinel，cur从head
 
 ## 快慢指针
 
 走多：`fast=fast.next`
-1. [获取倒n](leetcode/获取倒n.md)：
+1. [获取倒n.md](leetcode\获取倒n.md) 
    
    从哨兵开始还是从head开始都一样，因为拉开差距的是for，用了哨兵只是多走一次while.
 2. [删除倒n](leetcode/19删除倒n.md)
    
-   那么就要获取前一个节点（加入哨兵，for中`n+1`拉多一步找到前一个节点`）
+   那么就要获取前一个节点，实际是找倒n + 1，以及需要哨兵。
 
 
 走快：`fast=fast.next.next`
@@ -58,15 +71,48 @@
 
 ## 题
 
-- 反转链表 206：pre cur、新链表头插法、递归
-- 根据值删除节点 203：pre cur、递归
-- 删除倒数节点19
-- 有序链表去重82、83：
-- 合并有序链表21、23：数组排序、各链表指针
-- 查找链表中间节点876
-- 判断回文链表234
-- 检测链表是否有环141
-- 检测环的入口142
-- 删除指定节点237
-- 相交链表160
+### 模板题
 
+🚀 [获取倒n.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\获取倒n.md) ：快慢指针
+
+  [19. 删除链表的倒数第 N 个结点.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\19. 删除链表的倒数第 N 个结点.md) ：快慢指针找倒 n + 1
+
+
+
+🚀 [21. 合并两个有序链表.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\21. 合并两个有序链表.md) ：双指针
+
+ [23. 合并 K 个升序链表.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\23. 合并 K 个升序链表.md) ：双指针基础模板 + 分治
+
+
+
+🚀 [83. 删除排序链表中的重复元素.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\83. 删除排序链表中的重复元素.md) ：保留1个，cur和cur.next
+
+ [82. 删除排序链表中的重复元素 II.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\82. 删除排序链表中的重复元素 II.md) ：都删，cur和cur.next和pre
+
+
+
+🚀 [141. 环形链表.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\141. 环形链表.md) ：快慢都从head走
+
+ [142. 环形链表 II.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\142. 环形链表 II.md) ：快慢相遇，再慢和head相遇
+
+
+
+### 思路题
+
+ [160. 相交链表.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\160. 相交链表.md) ：两次遍历，长度对齐。
+
+### 其他基本题
+
+ [203. 移除链表元素.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\203. 移除链表元素.md) ：pre cur、cur和cur.next
+
+ [206. 反转链表.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\206. 反转链表.md) ：pre cur、新链表头插法、递归
+
+ [234. 回文链表.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\234. 回文链表.md) 
+
+
+
+ [876. 链表的中间结点.md](..\..\..\src\main\java\com\itheima\datastructure\linkedlist\leetcode\876. 链表的中间结点.md) 
+
+
+
+删除指定节点237
