--- a/docs/stl/单链表.md
+++ b/docs/stl/单链表.md
@@ -1,4 +1,4 @@
-# 单链表的结点定义
+## 单链表的结点定义
 
 ```cpp
 struct ListNode {
@@ -10,7 +10,7 @@ struct ListNode {
 };
 ```
 
-# 单链表的实现
+## 单链表的实现
 
 头结点存在 + 堆版本
 ```cpp
@@ -71,7 +71,7 @@ public:
 ```
 
 
-# 链表遍历
+## 链表遍历
 
 链表
 ```cpp
@@ -97,5 +97,4 @@ while(cur != NULL && cur->next != NULL){
 cout << cur->val << endl;
 // cur = 最后一个结点，非空。
 ```
-
 
