--- a/docs/基础/动态规划/2.md
+++ b/docs/基础/动态规划/2.md
@@ -1,15 +1,3 @@
-背包：
-
-​	`dp[n][cap+1]`: 因为`c-w[i]`会等于0，就需要cap=0的情况
-
-路径：
-
-​	
-
-
-
-
-
 上楼梯：
 
 - 最大方案数量： `dp[i] = dp[i−1]+dp[i−2]`
@@ -28,7 +16,19 @@
 
 
 
+走格子
 
+​	最大方案数量 
+
+​		[62. 不同路径.md](..\..\题\leetcode\62. 不同路径.md) : `dp[i][j] = dp[i-1][j] + dp[i][j-1]`
+
+​		 [63. 不同路径 II.md](..\..\题\leetcode\63. 不同路径 II.md) ：指定数组的路障
+
+​		[P8707 [蓝桥杯 2020 省 AB1] 走方格.md](..\..\题\其他\P8707 [蓝桥杯 2020 省 AB1] 走方格.md) ：路障在行列的偶数
+
+​	最小代价
+
+​		 [64. 最小路径和.md](..\..\题\leetcode\64. 最小路径和.md) 
 
 四个考虑
 
