--- a/docs/基础/动态规划/背包问题.md
+++ b/docs/基础/动态规划/背包问题.md
@@ -55,6 +55,8 @@ double fractionalKnapsack(Item[] items, int[] wgt, int[] val, int cap) {
 
 不需要物品价值排序。
 
+`dp[ n 或 n + 1][cap + 1]`: 都是 **cap + 1**。因为`c-w[i]`会等于0，就需要cap=0的情况
+
 ![image-20240812231037699](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408122310736.png)
 
 ### n x (cap+1)
@@ -206,7 +208,8 @@ public int pack01(int[] w, int[] v, int n, int cap) {
 ## 01背包：刚好价值的方案
 
 ```java
-public int pack01(int[] w, int n, int cap) {
+public int pack01(int[] w, int cap) {
+    int n = w.length;
     int[] dp = new int[cap + 1];
     for (int i = 1; i <= n; i++) {
         for (int c = cap; c >= 0; c--) {
