--- a/docs/基础/排序/06_堆排序.md
+++ b/docs/基础/排序/06_堆排序.md
@@ -12,10 +12,7 @@
 堆使用的是**完全二叉树**（从索引 0 开始存储节点数据）
 * 节点 $i$ 的左子节点为 $2i+1$，右子节点为 $2i+2$。根节点0，左右子节点1和2，2i必有，直接+1、+2
 
-* 节点 $i$ 的父节点为 $(i-1)/2$ 向下取整。 
-
-  ​	左子节点 2i+1，直接$[(2i+1)-1/2]=i$
-  ​	右子节点 2i+2，直接(2i+2)-1，变成i+0.5，取整会自然舍弃0.5。
+* 节点 $i$ 的父节点为 $(i-1)/2$ 向下取整。 (1-1)/2=0，1/2-1=-1
 
 * 非叶子节点范围为 $[0, size/2-1]$
 
