--- a/docs/基础/链表/链表.md
+++ b/docs/基础/链表/链表.md
@@ -1,31 +1,6 @@
-- 数组结构
+## 模板
 
-  ​	查询快（内存连续）、增删慢（增后移、删前移）
-
-- 队列结构
-
-  ​	查询慢（遍历链表）、增删快
-
-
-
-
-
-
-双向链表比单向链表查询快。查询第N个元素，会先判断离头结点还是尾结点近，用离得近的查。
-
-
-
-
-
-单向链表已经可以实现非连续存储，为什么还需要双向链表？
-
-​	双向链表删除前驱节点更方便
-
-
-
----
-
-## 在cur节点后插入节点
+### cur节点后面增删节点
 
 ```java
 void insert(ListNode cur){
@@ -33,11 +8,7 @@ void insert(ListNode cur){
     added.next = cur.next;
     cur.next = added;
 }
-```
 
-## 删除cur节点后面的节点
-
-```java
 void delete(ListNode cur){
   	// cur.next.next 需要 cur.next 不为空
     if(cur.next == null){
@@ -46,6 +17,8 @@ void delete(ListNode cur){
     cur.next = cur.next.next;
 }
 ```
+
+![](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409282137749.png)
 
 如果增删首节点，那么才加入哨兵，并且 cur 从哨兵开始。
 
@@ -59,17 +32,18 @@ ListNode add/delete(ListNode head){
   		ListNode added = new ListNode(1);
         added.next = cur.next.next;
         cur.next = added;
-        cur = cur.next;
         
         // delelte
         cur.next = cur.next.next;
+        
+        
         cur = cur.next;
     }
     return sentinel.next;
 }
 ```
 
-## 遍历
+### 遍历
 
 ```java
 ListNode cur = head;
@@ -79,11 +53,11 @@ while(cur != null){
 }
 ```
 
-## 创造链表
+### 创造链表
 
 ```java
 ListNode sentinel = new ListNode(0);
-ListNode cur = sentinel
+ListNode cur = sentinel;
 for(int i=0;i<nums.length;i++){
     cur.next = new ListNode(i);
     cur = cur.next;
@@ -93,11 +67,86 @@ return sentinel.next;
 
 
 
----
+### 🚀合并链表
 
-基本题
+```java
+// 21. 合并两个有序链表
+class Solution {
+    public ListNode mergeTwoLists(ListNode list1, ListNode list2) {
+        ListNode dummy = new ListNode(0);
+        ListNode cur = dummy;
+        while (list1 != null && list2 != null) {
+            if (list1.val <= list2.val) {
+                cur.next = list1;
+                list1 = list1.next;
+            } else {
+                cur.next = list2;
+                list2 = list2.next;
+            }
+            cur = cur.next;
+        }
+        if (list1 != null) {
+            cur.next = list1;
+        } else {
+            cur.next = list2;
+        }
+        return dummy.next;
+    }
+}
+```
 
-模板题
+### 🚀链表的中间结点
 
-难题
+奇数个返回中间。
 
+偶数个返回中间偏右。不同于int是返回中间偏左。
+
+```java
+// 876. 链表的中间结点
+class Solution {
+    public ListNode middleNode(ListNode head) {
+        ListNode slow = head;
+        ListNode fast = head;
+        while(fast != null && fast.next != null){
+            slow = slow.next;
+            fast = fast.next.next;
+        }
+        return slow;
+    }
+}
+```
+
+### 🚀反转链表
+
+```java
+class Solution {
+    public ListNode reverseList(ListNode head) {
+        // 单个的特殊
+        if(head == null){
+            return head;
+        }
+
+        // 递归退出
+        if(head.next == null){
+            return head;
+        }
+        ListNode h = reverseList(head.next);
+        head.next.next = head;
+        // !!! 防止循环
+        head.next = null;
+        return h;
+    }
+}
+```
+
+![image-20240928211755497](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409282117582.png)
+
+## 其他
+
+[160. 相交链表.md](..\..\题\leetcode\160. 相交链表.md) 
+
+
+
+删除重复元素
+
+​	 [83. 删除排序链表中的重复元素.md](..\..\题\leetcode\83. 删除排序链表中的重复元素.md) 
