--- a/docs/题/leetcode/155. 最小栈.md
+++ b/docs/题/leetcode/155. 最小栈.md
@@ -1,6 +1,19 @@
+实现 `MinStack` 类:
 
+- `MinStack()` 
+- `void push(int val)` 
+- `void pop()`
+- `int top()`
+- `int getMin()` **获取堆栈中的最小元素**。
 
-双栈法：记录最小值的栈 + 记录val的栈
+## 双栈法：记录val的栈 + 记录最小值的栈
+
+val 栈：正常
+
+min 栈：初始化放入最大值，之后put val就 put min(val, 栈顶)，弹出就同步弹出。栈顶就是最小值。
+
+![image-20240928224406032](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409282244078.png)
+
 ```java
 class MinStack {
 
@@ -38,7 +51,8 @@ class MinStack {
 }
 ```
 
-Node节点法，一个栈就行
+## Node节点法，一个栈就行，本质还是yi
+
 ```java
 class MinStack {
     static class Node{
