--- a/docs/题/leetcode/303. 区域和检索.md
+++ b/docs/题/leetcode/303. 区域和检索.md
@@ -1,3 +1,5 @@
+## 前缀和
+
 ```java
 // 303. 区域和检索 - 数组不可变
 class NumArray {
@@ -16,3 +18,103 @@ class NumArray {
     }
 }
 ```
+
+## 线段树
+
+```java
+// 303. 区域和检索 - 数组不可变
+class NumArray {
+    Tree tree;
+
+    public NumArray(int[] nums) {
+        tree = new Tree(nums);
+    }
+
+    public int sumRange(int left, int right) {
+        return tree.queryInterval(left, right);
+    }
+
+    static class Node {
+        int val;
+        int left;
+        int right;
+        int lazy = -1;
+    }
+
+    static class Tree {
+        int[] nums;
+        Node[] nodes;
+
+        public Tree(int[] nums) {
+            this.nums = nums;
+            nodes = new Node[4 * nums.length];
+            for(int i = 0; i < nodes.length; i++){
+                nodes[i] = new Node();
+            }
+            buildTree(0, 0, nums.length - 1);
+        }
+
+        // left, right 是索引
+        private void buildTree(int idx, int left, int right) {
+            // 设定节点的左右
+            nodes[idx].left = left;
+            nodes[idx].right = right;
+
+            // 递归退出条件：叶子节点
+            if (left == right) {
+                nodes[idx].val = nums[left];
+                return;
+            }
+
+            // 左右子树递归
+            int mid = left + right >>> 1;
+            int left_idx = idx * 2 + 1;
+            int right_idx = idx * 2 + 2;
+            buildTree(left_idx, left, mid);
+            buildTree(right_idx, mid + 1, right);
+
+            // 向上更新
+            pushup(idx);
+        }
+
+        private void pushup(int idx) {
+            int left_idx = idx * 2 + 1;
+            int right_idx = idx * 2 + 2;
+            nodes[idx].val = nodes[left_idx].val + nodes[right_idx].val;
+        }
+
+        public int queryInterval(int left, int right) {
+            return _queryInterval(left, right, 0, 0, nums.length - 1);
+        }
+
+        private int _queryInterval(int qLeft, int qRight, int idx, int left, int right) {
+            // 被查询区间包裹
+            if (qLeft <= left && right <= qRight) {
+                return nodes[idx].val;
+            }
+
+            // 超出
+            if (qRight < left || right < qLeft) {
+                return 0;
+            }
+
+            // 向下更新
+            // pushdown(idx);
+
+            // 左右子树中查询
+            int mid = left + right >>> 1;
+            int left_idx = idx * 2 + 1;
+            int right_idx = idx * 2 + 2;
+            int sum = 0;
+            if (left <= mid) {
+                sum += _queryInterval(qLeft, qRight, left_idx, left, mid);
+            }
+            if (right > mid) {
+                sum += _queryInterval(qLeft, qRight, right_idx, mid + 1, right);
+            }
+            return sum;
+        }
+    }
+}
+```
+
