--- a/docs/高级/前缀和/前缀和.md
+++ b/docs/高级/前缀和/前缀和.md
@@ -1,18 +1,24 @@
-# 前缀和
+## 一维前缀和
 
-对于数组 $nums$，定义它的前缀和 $sums(i)$ 表示 `[0...i-1]`，数组前 `i` 个元素的和。
+![image-20240927153932012](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409271539077.png)
+
+
+
+### 前缀和的含义
+
+sums[i]表示[0...i-1]的子数组的和（不包含自己），sums[0]=0 表示一个空数组的元素和。
 
 - $sums[0]=0$
 
 - $sums[i+1] = \sum\limits_{j=0}^{i}\textit{nums}[j]$。
 
-根据这个定义，有 $sums[i+1]=sums[i]+nums[i]$
+则 $sums[i+1]=sums[i]+nums[i]$
+
+
 
 > 例如 nums=[1,2,1,2]，对应的前缀和数组为 sums=[0,1,3,4,6]。
 
-sums[i]表示[0...i-1]的子数组的和，sums[0]=0 表示一个空数组的元素和。
-
-# 前缀和之差
+### 前缀和之差
 
 把子数组的元素和转换成两个前缀和的差，即
 
@@ -23,3 +29,8 @@ $$\displaystyle \sum_{j=left}^{right}\textit{nums}[j] = sums[right+1] - sums[lef
 > 问：为什么要定义 sums[0]=0，这样做有什么好处？
 
 答：如果要计算的子数组是`[0...j]`，那么就是sums[j+1]-sums[0]。如果不定义 sums[0]=0，就必须特判 left=0 的情况了。
+
+## 二维前缀和
+
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406122243744.png)
+
